[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "urls"]
name = "luna-boards"
authors = [{name = "Great Scott Gadgets", email = "dev@greatscottgadgets.com"}]
description = "Board and connector definitions for LUNA"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">3.7"

dependencies = [
    "amaranth @ git+https://github.com/amaranth-lang/amaranth.git@main",
    "amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards.git@main",
    "luna @ git+https://github.com/greatscottgadgets/luna.git@main",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools_scm]
local_scheme = "node-and-timestamp"
